--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,16 +1,32 @@
 body{
     font-family: 'Press Start 2P', cursive;
-    padding:20px;
     font-weight: normal;
 }
-div {
-    padding-top:5px;
-    padding-bottom:5px;
+#container {
+    margin:0 auto;
+    width: 900px;
+    height: 400px;
+}
+#title, h1 {
+    width: 600px;
+    display: block;
+    margin:5px auto;
+    text-align: center;
+    color: black;
+    font-weight: normal;
+}
+#title {
+    margin-top:20px;
+    margin-bottom: 50px;
 }
 h1, h2 {
     font-size: 24px;
     font-weight: normal;
     line-height: 120%;
+}
+div {
+    padding-top:5px;
+    padding-bottom:5px;
 }
 button{
     height: 36px;
@@ -19,7 +35,7 @@ button{
     border: 1px solid #f2f2f2;
     color: blue;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 16px;
     margin: 11px 4px;
     min-width: 54px;
     padding: 0 16px;
@@ -32,7 +48,7 @@ button:focus, button:hover, button:active {
 }
 #winner{
     color:green;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 120%;
 }
 #playerScore {
@@ -51,6 +67,20 @@ button:focus, button:hover, button:active {
 }
 #gameResults {
     float:right;
-    width:30%;
+    width:25%;
     font-family: 'Press Start 2P', cursive;
+    border: solid;
+    border-width: 2px;
+    border-radius: 15px;
+    border-color: black;
+    background-color:white;
+    box-shadow: 5px 5px 10px black;
+}
+#container #main div{
+    margin-bottom: 10px;
+    margin-right: 25px;
+}
+#container #gameResults div {
+    margin-left: 10px;
+    margin-bottom: 10px;
 }
